@@ -1,3 +1,7 @@
+ 2016-03-07 22:27  hvlad 
+   M src/jrd/tra.cpp
+Fixed bug CORE-4645 : internal Firebird consistency check (cannot find tip page (165), file: tra.cpp line: 2375)
+
  2016-02-29 19:41  dimitr 
    M src/jrd/Optimizer.cpp
 Misc (simplified the code).
